--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "ejs": "~2.3.3",
     "express": "~4.13.1",
     "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "express-session": "^1.10.1",
+    "mongoose": "*",
+    "passport": "^0.2.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^1.0.0",
+    "should": "~2.1.0"
   }
 }
