--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "express": "~4.13.1",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
+    "express-favicon": "^1.0.1",
     "express-session": "^1.10.1",
     "mongoose": "*",
+    "morgan": "~1.6.1",
     "passport": "^0.2.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^1.0.0",
+    "serve-favicon": "~2.3.0",
     "should": "~2.1.0"
   }
 }
